fix: update alerts and badges  text

--- a/src/components/_badges.scss
+++ b/src/components/_badges.scss
@@ -1,6 +1,6 @@
 .badge {
   @include border-style();
-  @include color('color', 'primary-text');
+  @include color('color', 'white');
   @include color('background-color', 'muted');
   @include color('border-color', 'primary');
   border: 2px solid;
