--- a/src/components/_cards.scss
+++ b/src/components/_cards.scss
@@ -2,7 +2,8 @@
   @include shadow;
   @include color('border-color', 'muted-light');
   backface-visibility: hidden;
-  border: 2px solid;
+  border-style: solid;
+  border-width: 2px;
   display: flex;
   flex-direction: column;
   position: relative;
