--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -9,7 +9,8 @@ button,
   @include color('background-color', 'main-background');
   align-self: center;
   background-image: none;
-  border: 2px solid;
+  border-style: solid;
+  border-width: 2px;
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
@@ -46,7 +47,8 @@ button,
 
   &:focus {
     @include color('border-color', 'secondary');
-    border: 2px solid;
+    border-style: solid;
+    border-width: 2px;
     box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
   }
 
@@ -63,16 +65,7 @@ button,
 }
 
 a {
-  @include color('color', 'secondary');
-  background-image: linear-gradient (
-    5deg,
-    transparent 65%,
-    $secondary 80%,
-    transparent 90%
-  ),
-    linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%),
-    linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%),
-    linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
+  background-image: linear-gradient(5deg, transparent 65%, $secondary 80%, transparent 90%), linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%), linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%), linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
   background-position: 0 90%;
   background-repeat: repeat-x;
   background-size: 4px 3px;
