feat: change links color to secondary

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -65,6 +65,7 @@ button,
 }
 
 a {
+  @include color('color', 'secondary');
   background-image: linear-gradient(5deg, transparent 65%, $secondary 80%, transparent 90%), linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%), linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%), linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
   background-position: 0 90%;
   background-repeat: repeat-x;
