Add dark mode docs and prepare for release

--- a/docs/layouts/partials/head/includes.html
+++ b/docs/layouts/partials/head/includes.html
@@ -1,3 +1,4 @@
 <!-- Styles -->
 <link rel='stylesheet' href='/assets/paper.css'>
 <link rel='stylesheet' href='/assets/demo.css'>
+<link rel='stylesheet' href='/assets/syntax.css'>
