--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -29,8 +29,6 @@ $danger-dark: darken($danger, 45%) !default;
 $muted-dark: darken($muted, 35%) !default;
 
 $primary-light-10: lighten($primary, 10%) !default;
-$primary-light-70: lighten($primary, 70%) !default;
-$primary-light-50: lighten($primary, 50%) !default;
 $secondary-light-10: lighten($secondary, 10%) !default;
 $success-light-10: lighten($success, 10%) !default;
 $warning-light-10: lighten($warning, 10%) !default;
@@ -44,6 +42,8 @@ $warning-dark-10: darken($warning, 10%) !default;
 $danger-dark-10: darken($danger, 10%) !default;
 $muted-dark-10: darken($muted, 10%) !default;
 
+$primary-shaded-70: lighten($primary, 70%) !default;
+$primary-shaded-50: lighten($primary, 50%) !default;
 
 $white-dark: rgba(#000, 0.03) !default;
 $white-dark-light-80: lighten($white-dark, 80%) !default;
@@ -53,15 +53,17 @@ $main-background: rgba(#fff, 1) !default;
 $black: rgba(#000, 1) !default;
 $main-background-light: lighten($main-background, 50%) !default;
 
-$primary-text: $primary !default;
-$secondary-text: $primary !default;
-$success-text: $primary !default;
-$warning-text: $primary !default;
-$danger-text: $primary !default;
-$muted-text: $primary !default;
+$primary-text: $primary-dark-10 !default;
+$secondary-text: $secondary-dark-10 !default;
+$success-text: $success-dark-10 !default;
+$warning-text: $warning-dark-10 !default;
+$danger-text: $danger-dark-10 !default;
+$muted-text: $muted-dark-10 !default;
 
 $shadow-color-regular: hsla(0, 0, 0%, 0.2) !default;
 $shadow-color-hover: hsla(0, 0, 0%, 0.3) !default;
+
+$primary-inverse: #fff !default;
 
 
 // Set dark theme colors
@@ -89,8 +91,6 @@ $dark-danger-dark: darken($dark-danger, 45%) !default;
 $dark-muted-dark: darken($dark-muted, 35%) !default;
 
 $dark-primary-light-10: lighten($dark-primary, 10%) !default;
-$dark-primary-light-70: lighten($dark-primary, 70%) !default;
-$dark-primary-light-50: lighten($dark-primary, 50%) !default;
 $dark-secondary-light-10: lighten($dark-secondary, 10%) !default;
 $dark-success-light-10: lighten($dark-success, 10%) !default;
 $dark-warning-light-10: lighten($dark-warning, 10%) !default;
@@ -104,23 +104,28 @@ $dark-warning-dark-10: darken($dark-warning, 10%) !default;
 $dark-danger-dark-10: darken($dark-danger, 10%) !default;
 $dark-muted-dark-10: darken($dark-muted, 10%) !default;
 
+$dark-primary-shaded-70: darken($primary, 7%) !default;
+$dark-primary-shaded-50: darken($primary, 5%) !default;
+
 $dark-white-dark: rgba(#fff, 0.03) !default;
 $dark-white-dark-light-80: lighten($dark-white-dark, 80%) !default;
 $dark-light-dark: rgba(#fff, 0.7) !default;
 $dark-white: rgba(#fff, 1) !default;
-$dark-main-background: rgba(#41403e, 1) !default;
+$dark-main-background: rgba($primary, 1) !default;
 $dark-main-background-light: lighten($dark-main-background, 50%) !default;
 $dark-black: rgba(#000, 1) !default;
 
-$dark-primary-text: #41403e !default;
-$dark-secondary-text: #41403e !default;
-$dark-success-text: #41403e !default;
-$dark-warning-text: #41403e !default;
-$dark-danger-text: #41403e !default;
-$dark-muted-text: #41403e !default;
+$dark-primary-text: $primary !default;
+$dark-secondary-text: $dark-secondary-dark-10 !default;
+$dark-success-text: $dark-success-dark-10 !default;
+$dark-warning-text: $dark-warning-dark-10 !default;
+$dark-danger-text: $dark-danger-dark-10 !default;
+$dark-muted-text: $dark-muted-dark-10 !default;
 
 $dark-shadow-color-regular: hsla(0, 0, 0%, 0.2) !default;
 $dark-shadow-color-hover: hsla(0, 0, 0%, 0.3) !default;
+
+$dark-primary-inverse: $primary !default;
 
 
 
@@ -145,8 +150,6 @@ $theme-map: (
     danger-dark:$danger-dark,
     muted-dark:$muted-dark,
     primary-light-10:$primary-light-10,
-    primary-light-50: $primary-light-50,
-    primary-light-70: $primary-light-70,
     secondary-light-10:$secondary-light-10,
     success-light-10:$success-light-10,
     warning-light-10:$warning-light-10,
@@ -158,13 +161,15 @@ $theme-map: (
     warning-dark-10:$warning-dark-10,
     danger-dark-10:$danger-dark-10,
     muted-dark-10:$muted-dark-10,
+    primary-shaded-50: $primary-shaded-50,
+    primary-shaded-70: $primary-shaded-70,
     white-dark:$white-dark,
     white-dark-light-80:$white-dark-light-80,
     light-dark:$light-dark,
-    white:$white,
+    'white':$white,
     main-background: $main-background,
     main-background-light: $main-background-light,
-    black: $black,
+    'black': $black,
     primary-text:$primary-text,
     secondary-text:$secondary-text,
     success-text:$success-text,
@@ -173,6 +178,7 @@ $theme-map: (
     muted-text:$muted-text,
     shadow-color-regular: $shadow-color-regular,
     shadow-color-hover: $shadow-color-hover,
+    primary-inverse: $primary-inverse,
   ),
   dark: (
     primary: $dark-primary,
@@ -194,8 +200,6 @@ $theme-map: (
     danger-dark:$dark-danger-dark,
     muted-dark:$dark-muted-dark,
     primary-light-10:$dark-primary-light-10,
-    primary-light-50: $dark-primary-light-50,
-    primary-light-70: $dark-primary-light-70,
     secondary-light-10:$dark-secondary-light-10,
     success-light-10:$dark-success-light-10,
     warning-light-10:$dark-warning-light-10,
@@ -207,13 +211,15 @@ $theme-map: (
     warning-dark-10:$dark-warning-dark-10,
     danger-dark-10:$dark-danger-dark-10,
     muted-dark-10:$dark-muted-dark-10,
+    primary-shaded-50: $dark-primary-shaded-50,
+    primary-shaded-70: $dark-primary-shaded-70,
     white-dark:$dark-white-dark,
     white-dark-light-80:$dark-white-dark-light-80,
     light-dark:$dark-light-dark,
-    white:$dark-white,
+    'white':$dark-white,
     main-background: $dark-main-background,
     main-background-light: $dark-main-background-light,
-    black: $dark-black,
+    'black': $dark-black,
     primary-text:$dark-primary-text,
     secondary-text:$dark-secondary-text,
     success-text:$dark-success-text,
@@ -222,6 +228,7 @@ $theme-map: (
     muted-text:$dark-muted-text,
     shadow-color-regular: $dark-shadow-color-regular,
     shadow-color-hover: $dark-shadow-color-hover,
+    primary-inverse: $dark-primary-inverse,
   )
 );
 
