Enable "font-display: swap"

--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -3,7 +3,7 @@
 */
 
 // The src for fonts (false to disable)
-$font-src: 'https://fonts.googleapis.com/css?family=Neucha|Patrick+Hand+SC' !default;
+$font-src: 'https://fonts.googleapis.com/css?family=Neucha|Patrick+Hand+SC&display=swap' !default;
 
 // Imports
 @if $font-src {
