--- a/src/components/_accordion.scss
+++ b/src/components/_accordion.scss
@@ -21,7 +21,7 @@
     padding: 0 0.75rem;
   }
 
-  input {
+  > input {
     display: none;
 
     &:checked + label {
@@ -36,7 +36,7 @@
     }
   }
 
-  label {
+  > label {
     @include color('color', 'primary');
     @include color('border-bottom-color', 'muted-light');
     border-bottom-style: solid;
