Fix _navbar regression

--- a/src/components/_navbar.scss
+++ b/src/components/_navbar.scss
@@ -18,7 +18,8 @@ nav {
     @include color('color', 'primary');
     border-bottom-left-radius: 15px 5px;
     border-bottom-right-radius: 15px 3px;
-    height: 0.3rem;
+    border-bottom-style: solid;
+    border-bottom-width: 5px;
     margin: 6px 0;
     transition: 0.4s;
     width: 2rem;
