Set html background color to match current theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import 'core/config';
 @import 'core/mixins';
 @import 'core/reset';
+@import 'core/default_styles';
 
 /* Layout styling */
 @import 'layout/container';
