Apply suggestions from code review
Use 235ms transition duration, ease-in-out, and omit default value.

Co-authored-by: Olivier <olivierc8@hotmail.com>

--- a/src/components/_popovers.scss
+++ b/src/components/_popovers.scss
@@ -10,7 +10,7 @@
   &:hover {
     &::after {
       opacity: 1;
-      transition: opacity 0.2s ease-out, visibility 0s linear 0s;
+      transition: opacity 235ms ease-in-out, visibility 0s linear;
       visibility: visible;
     }
   }
@@ -33,7 +33,7 @@
     text-align: center;
     top: -6px;
     transform: translateX(-50%) translateY(-100%);
-    transition: opacity 0.2s ease-out, visibility 0s linear 0.2s;
+    transition: opacity 235ms ease-in-out, visibility 0s linear 0.2s;
     visibility: hidden;
   }
 }
