Added list group component support

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,7 @@
 @import 'components/tabs';
 @import 'components/utilities';
 @import 'components/navbar';
+@import 'components/list-group';
 
 // @media print {
 //  @import 'layout/print';
