--- a/src/components/_tabs.scss
+++ b/src/components/_tabs.scss
@@ -5,7 +5,7 @@
     padding: 0.75rem 0 0;
   }
 
-  input {
+  input[id^='tab'] {
     display: none;
 
     &:checked + label {
@@ -22,7 +22,7 @@
     }
   }
 
-  label {
+  label[for^='tab'] {
     @include color('color', primary-light);
     display: inline-block;
     font-weight: 600;
